working out kinks with account component

--- a/client/demo-app/src/app/components/account/account.component.html
+++ b/client/demo-app/src/app/components/account/account.component.html
@@ -1,1 +1,8 @@
-<p>account works!</p>
+<div class="account-flexbox">
+    <div class="account-details">
+        <p>Id: {{ account.id }}</p>
+        <p>Name: {{ account.name }}</p>
+        <p>Email: {{ account.email }}</p>
+        <p>Type: {{ account.type }}</p>
+    </div>
+</div>
