--- a/client/demo-app/src/app/app.component.html
+++ b/client/demo-app/src/app/app.component.html
@@ -73,11 +73,10 @@
 
   .content {
     display: flex;
-    margin: 82px auto 32px;
+    margin: auto ;
     padding: 0 16px;
-    max-width: 960px;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
   }
 
   svg.material-icons {
