--- a/client/demo-app/src/app/components/account/account.component.css
+++ b/client/demo-app/src/app/components/account/account.component.css
@@ -1,9 +1,18 @@
 .account-details {
-    border: 2px solid gray;
     padding: 10px;
 }
 
 .account {
     display: flexbox;
-    width: 100%;
+    width: 80%;
+}
+
+.account-transactions {
+    border: 2px solid gray;
+    /*  */
+}
+
+.transaction {
+    display: flex;
+    flex-direction: column;
 }
