--- a/client/demo-app/src/app/components/account/account.component.html
+++ b/client/demo-app/src/app/components/account/account.component.html
@@ -12,7 +12,7 @@
         </mat-card>
         <mat-card>
             <mat-card-header>
-                <mat-card-title>Id</mat-card-title>
+                <mat-card-title>Balance</mat-card-title>
             </mat-card-header>
             <mat-card-content>{{ '$' + balance.toFixed(2) }}</mat-card-content>
         </mat-card>
@@ -41,7 +41,7 @@
                   <mat-panel-title>Account Transactions</mat-panel-title>
                   <mat-panel-description>Click for a list of this account's transactions</mat-panel-description>
               </mat-expansion-panel-header>
-              <table mat-table [dataSource]="account.transactions">
+              <table mat-table [dataSource]="[]">
 
                 <!--- Note that these columns can be defined in any order.
                       The actual rendered columns are set as a property on the row definition" -->
