--- a/client/demo-app/src/app/components/home/home.component.html
+++ b/client/demo-app/src/app/components/home/home.component.html
@@ -1,14 +1,10 @@
 <h1 class="welcome">Welcome, administrator!</h1>
 <h3 class="title">Accounts</h3>
 <table mat-table [dataSource]="accounts">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
   
-    <!-- Position Column -->
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let account"  routerLink="/account" [queryParams]="{id: account.id}"> {{ account.id }} </td>
+        <td mat-cell *matCellDef="let account"  routerLink="/account" [queryParams]="{id: account.id}"> <button>{{ account.id }}</button> </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
