--- a/client/demo-app/src/app/components/account/account.component.html
+++ b/client/demo-app/src/app/components/account/account.component.html
@@ -8,7 +8,7 @@
             <mat-card-header>
                 <mat-card-title>Id</mat-card-title>
             </mat-card-header>
-            <mat-card-content>{{ account.id }}</mat-card-content>
+            <mat-card-content>{{ account.account_id }}</mat-card-content>
         </mat-card>
         <mat-card>
             <mat-card-header>
@@ -32,7 +32,7 @@
             <mat-card-header>
                 <mat-card-title>Account Type</mat-card-title>
             </mat-card-header>
-            <mat-card-content>{{ account.type }}</mat-card-content>
+            <mat-card-content>{{ account.account_type }}</mat-card-content>
         </mat-card>
         <br/>
         <mat-accordion>
