--- a/client/demo-app/src/app/components/home/home.component.html
+++ b/client/demo-app/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
   
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let account"  routerLink="/account" [queryParams]="{id: account.id}"> <button>{{ account.id }}</button> </td>
+        <td mat-cell *matCellDef="let account"  routerLink="/account" [queryParams]="{account_id: account.account_id}"> <button mat-button>{{ account.account_id }}</button> </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -19,7 +19,7 @@
     
     <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef>Account Type</th>
-        <td mat-cell *matCellDef="let account"> {{ account.type }} </td>
+        <td mat-cell *matCellDef="let account"> {{ account.account_type }} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
