--- a/client/demo-app/src/app/components/account/account.component.html
+++ b/client/demo-app/src/app/components/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="account">
     <p><a routerLink="/"><mat-icon>arrow_back</mat-icon></a></p>
-    <div class="account-details">
+    <div class="account-details" *ngIf="account">
         <h2>
             Account Details
         </h2>
@@ -41,15 +41,10 @@
                   <mat-panel-title>Account Transactions</mat-panel-title>
                   <mat-panel-description>Click for a list of this account's transactions</mat-panel-description>
               </mat-expansion-panel-header>
-              <table mat-table [dataSource]="[]">
-
-                <!--- Note that these columns can be defined in any order.
-                      The actual rendered columns are set as a property on the row definition" -->
-              
-                <!-- Position Column -->
+              <table mat-table [dataSource]="transactions">
                 <ng-container matColumnDef="id">
                     <th mat-header-cell *matHeaderCellDef>Id</th>
-                    <td mat-cell *matCellDef="let transaction"> {{transaction.id}} </td>
+                    <td mat-cell *matCellDef="let transaction"> {{transaction.transaction_id}} </td>
                 </ng-container>
             
                 <ng-container matColumnDef="date">
@@ -59,7 +54,7 @@
             
                 <ng-container matColumnDef="accountId">
                     <th mat-header-cell *matHeaderCellDef>Account Id</th>
-                    <td mat-cell *matCellDef="let transaction"> {{transaction.accountId}} </td>
+                    <td mat-cell *matCellDef="let transaction"> {{transaction.account_id}} </td>
                 </ng-container>
                 
                 <ng-container matColumnDef="amount">
@@ -69,7 +64,7 @@
             
                 <ng-container matColumnDef="type">
                     <th mat-header-cell *matHeaderCellDef>Type</th>
-                    <td mat-cell *matCellDef="let transaction"> {{transaction.type}} </td>
+                    <td mat-cell *matCellDef="let transaction"> {{transaction.transaction_type}} </td>
                 </ng-container>
             
                 <tr mat-header-row *matHeaderRowDef="displayedTransactionColumns"></tr>
