--- a/client/demo-app/src/app/components/home/home.component.html
+++ b/client/demo-app/src/app/components/home/home.component.html
@@ -4,22 +4,22 @@
   
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let account"  routerLink="/account" [queryParams]="{account_id: account.account_id}"> <button mat-button>{{ account.account_id }}</button> </td>
+        <td mat-cell *matCellDef="let account"  routerLink="/account" [queryParams]="{account_id: account.account_id}"> <button mat-button>{{ account?.account_id }}</button> </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let account"> {{ account.name }}  </td>
+        <td mat-cell *matCellDef="let account"> {{ account?.name }}  </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let account"> {{ account.email }} </td>
+        <td mat-cell *matCellDef="let account"> {{ account?.email }} </td>
     </ng-container>
     
     <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef>Account Type</th>
-        <td mat-cell *matCellDef="let account"> {{ account.account_type }} </td>
+        <td mat-cell *matCellDef="let account"> {{ account?.account_type }} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
